--- a/download/readme
+++ b/download/readme
@@ -1,1 +1,1 @@
-This folder contains downloadable ready to use files, mostly following the folder structure of the target environment.
+This folder contains downloadable ready to use files, following the folder structure of the target environment.
