--- a/helper_files/dvbt_configuration/readme
+++ b/helper_files/dvbt_configuration/readme
@@ -1,1 +1,1 @@
-Hier sind hilfsdateien, Zwischenergebnisse zur dvbt Konfiguration enthalten.
+Hier sind Hilfsdateien, Zwischenergebnisse zur DVBT Konfiguration enthalten.
